SwiperJs for Image Slider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "Efiwura",
+        "firestore",
+        "Swiper",
         "tailwindcss",
         "toastify"
     ]
